fixing contact alignment

--- a/css/style.css
+++ b/css/style.css
@@ -358,6 +358,9 @@ main {
   background-size: 100% 100%;
   background-repeat: no-repeat;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .contact__icon {
